Made some variables local and deleted hand card check in method playFromStock, as PE does this already.